removed mock test

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -25,4 +25,9 @@ env =
     JWT_ALGORITHM=HS256
     ACCESS_TOKEN_EXPIRE_MINUTES=30
     OLLAMA_API_URL=http://localhost:11434
+    RABBITMQ_URL=amqp://guest:guest@localhost/
     WHITELISTED_IPS=127.0.0.1,::1
+
+# Asyncio settings
+asyncio_mode = auto
+asyncio_fixture_loop_scope = session
