--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,33 +1,21 @@
 [pytest]
-# Test file patterns
+testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Test paths
-testpaths = tests
-
-# Markers
 markers =
     asyncio: mark test as async/await test
 
-# Coverage settings
 addopts = 
     --cov=app
     --cov-report=term-missing
     --cov-report=html
     --verbose
 
-# Environment variables for testing
-env =
-    DATABASE_URL=sqlite:///:memory:
-    JWT_SECRET_KEY=test-secret-key
-    JWT_ALGORITHM=HS256
-    ACCESS_TOKEN_EXPIRE_MINUTES=30
-    OLLAMA_API_URL=http://localhost:11434
-    RABBITMQ_URL=amqp://guest:guest@localhost/
-    WHITELISTED_IPS=127.0.0.1,::1
-
-# Asyncio settings
 asyncio_mode = auto
 asyncio_fixture_loop_scope = session
+
+filterwarnings =
+    ignore::pytest.PytestConfigWarning
+    ignore::DeprecationWarning
