--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "@tiptap/extension-placeholder": "^2.2.4",
+    "@tiptap/extension-image": "^2.2.4",
+    "katex": "^0.16.9",
+    "prismjs": "^1.29.0",
+    "react-katex": "^3.0.1",
+    "html-react-parser": "^5.1.8"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
@@ -30,6 +39,8 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@types/katex": "^0.16.7",
+    "@types/prismjs": "^1.26.3"
   }
 }
