--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/katex": "^0.16.7",
+    "@types/prismjs": "^1.26.5",
+    "ace-builds": "^1.39.0",
     "crypto-js": "^4.2.0",
+    "katex": "^0.16.21",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^18.2.0",
+    "react-latex-next": "^3.0.0",
     "react-router-dom": "^6.14.2",
     "uuid": "^11.1.0",
     "@tiptap/react": "^2.2.4",
