--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,10 @@ http {
         location / {
             proxy_pass http://localhost:8000; # FastAPI
             proxy_http_version 1.1;
-            proxy_set_header Connection '';
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
             proxy_buffering off;
             proxy_cache off;
             proxy_read_timeout 24h;
