--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,7 @@ http {
         listen 80;
         server_name chat.seadragoninkmortal.com;
         
+        # Frontend app
         location / {
             proxy_pass http://localhost:3000; # React frontend
             proxy_http_version 1.1;
@@ -27,6 +28,30 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+        }
+        
+        # Backend API routing
+        location /api/ {
+            proxy_pass http://localhost:8000/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        
+        # WebSocket specific endpoint
+        location /api/chat/ws {
+            proxy_pass http://localhost:8000/api/chat/ws;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 24h; # Long timeout for streaming messages
+            proxy_send_timeout 24h;
+            proxy_buffering off;   # Critical for streaming responses
         }
     }
 
