--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ python-dotenv>=1.0.0
 # Utilities
 pydantic>=2.0.0
 psutil>=5.9.0  # System monitoring
+tiktoken>=0.4.0  # Token counting for LLMs
 
 # Message Queue
 pika>=1.3.0  # RabbitMQ client
