--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host localhost --port 3000 --open /",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
